# fastapi_test

./: .env  criar_tabelas.py  main.py  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: artigo.py  usuario.py
core/: auth.py  configs.py  database.py  deps.py  security.py
models/: artigo_model.py  usuario_model.py
schemas/: artigo_schema.py  usuario_schema.py
