[tool.poetry]
name = "sec6"
version = "0.1.0"
description = ""
authors = ["levisatto <levi.siedschlag@fontespromotora.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
uvicorn = "^0.18.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytz = "^2022.2.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.10.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
